<resources>
    <string name="app_name">PagoPrompt</string>
    <string name="name_logo">logo</string>

    <string name="title_list">Servicios disponibles</string>
    <string name="title_postpone">¿Deseas posponer la alarma?</string>

    <string name="lbl_user">Usuario</string>
    <string name="lbl_pass">Contraseña</string>

    <string name="h_user">Ingresa tu usuario</string>
    <string name="h_pass">Ingresa tu contraseña</string>

    <string name="btn_login">Ingresar</string>
    <string name="btn_home">Inicio</string>
    <string name="btn_logout">Salir</string>

    <string name="card_title">Agua</string>
    <string name="card_sub_title">Fecha de corte: 01-04-2024</string>
    <string name="card_body_1">Num.contrato 123-456-789-10</string>
    <string name="card_body_2">Valor total: $120.000</string>
    <string name="card_btn_posponer">Posponer</string>
    <string name="card_btn_pagar">Pagar</string>

    <string name="pp_p1">Requerimos confirmar que seas tu, por favor realiza la autenticación facial.</string>
    <string name="pp_p2">Ajusta tu rostro al óvalo que se encuentra abajo y cuando estés listo presiona continuar</string>

    <string name="c_t_pay">Realizar pago</string>

    <string name="c_b_pay">Te llevaremos a la plataforma de pago de tu proveedor, allí deberás diligenciar el formulario como lo haces habitualmente desde un navegador web.</string>

    <string name="t_cancel">Cancelar</string>

    <string name="t_continue">Continuar</string>

    <string name="c_t_redirect">Redirigiendo</string>
    <string name="c_b_redirect">en 3 segundos.</string>


</resources>